Remove guava.