@@ -2,15 +2,13 @@ package org.openstack4j.openstack.barbican.internal;
 
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 
-import com.google.common.collect.ImmutableMap;
 import org.openstack4j.api.barbican.SecretService;
 import org.openstack4j.model.barbican.Secret;
 import org.openstack4j.model.common.ActionResponse;
 import org.openstack4j.openstack.barbican.domain.BarbicanSecret;
 import org.openstack4j.openstack.barbican.domain.BarbicanSecret.Secrets;
-
-import static com.google.common.base.Preconditions.checkNotNull;
 
 /**
  * Created by reneschollmeyer on 02.08.17.
@@ -41,7 +39,7 @@ public class SecretServiceImpl extends BaseBarbicanServices implements SecretSer
      */
     @Override
     public List<? extends Secret> list(final String name) {
-        return list(ImmutableMap.of("name", name));
+        return list(Map.of("name", name));
     }
 
     /**
@@ -49,7 +47,7 @@ public class SecretServiceImpl extends BaseBarbicanServices implements SecretSer
      */
     @Override
     public Secret get(String secretId) {
-        checkNotNull(secretId);
+        Objects.requireNonNull(secretId);
         return get(BarbicanSecret.class, uri(SPECIFIC_RESOURCE_PATH, secretId)).execute();
     }
 
@@ -58,7 +56,7 @@ public class SecretServiceImpl extends BaseBarbicanServices implements SecretSer
      */
     @Override
     public ActionResponse delete(String secretId) {
-        checkNotNull(secretId);
+        Objects.requireNonNull(secretId);
         return deleteWithResponse(uri(SPECIFIC_RESOURCE_PATH, secretId)).execute();
     }
 
@@ -67,7 +65,7 @@ public class SecretServiceImpl extends BaseBarbicanServices implements SecretSer
      */
     @Override
     public Secret create(Secret secret) {
-        checkNotNull(secret);
+        Objects.requireNonNull(secret);
         return post(BarbicanSecret.class, uri(RESOURCE_PATH)).entity(secret).execute();
     }
 }
